--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,5 +1,5 @@
 <!-- {{questionWithAnswers | json}} -->
-<!-- {{questionss | json}} -->
+<!-- {{groupedQuestions | json}} -->
 
 
 <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
@@ -31,38 +31,36 @@
                 <!-- Timer couter on small devices -->
                 <div class="small-devices col-md-2 text-center">
                     <!-- progres -->
-                    <mat-card class="cards fixed-card"
-                        style="position: fixed; top: 10px; right: 10px; width: 200px; z-index: 1000;">
+                    <mat-card class="cards fixed-card">
                         <mat-card-header>
-                            <mat-card-title>Progress </mat-card-title>
-                            <mat-card-subtitle>
-                                Quiz will be submitted automatically when time elapses <b>(0:0) </b>
-                            </mat-card-subtitle>
-                        </mat-card-header>
+                            <mat-card-title>Time Left: </mat-card-title>
+                          </mat-card-header>
                         <mat-card-content>
-                            <mat-spinner diameter="70" class="spin"
-                                [value]="(timer/(this.questions.length  * 60)) * 100 " mode="determinate" color="warn"
-                                style="margin: auto;"></mat-spinner>
-                            <h1 class="tcenter"><i>{{ getFormmatedTime() }} </i></h1>
+                            <h1 class="text-center"><i>{{ getFormmatedTime() }} </i></h1>
+                            <!-- <mat-spinner [value]="(this.time/(this.questions.length * 2 * 60)) * 100"  -->
+                            <!-- <mat-spinner [value]="(timer/(this.questions.length  * 60)) * 100 " mode="determinate"
+                                color="accent" style="margin: auto;"></mat-spinner> -->
                         </mat-card-content>
                     </mat-card>
                 </div>
 
 
                 <div class="col-md-8">
+                    
 
                     <ng-container>
-                        <h1 class="mt20">On going quiz <b>{{questions[0].quiz.title}}</b></h1>
+                        <h1 class="mt20">On going quiz {{quizTitle}} for <b> {{courseTitle}}</b></h1>
+
                     </ng-container>
 
+                    <div *ngIf="questions.length>0">
 
                     <div *ngIf="questions">
 
                         <mat-card class="cards"
-                            style=" font-size:20px; color: white;text-align: center; background-color: purple;">
-                            SECTION A
-
-                        </mat-card>
+                        style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
+                    <mat-label> SECTION A -{{timeO /60}} minutes </mat-label>
+                    </mat-card>
                     </div>
 
 
@@ -70,47 +68,8 @@
                         *ngFor="let q of questions| paginate:{itemsPerPage: tableSize, currentPage:page, totalItems:count}; let i = index"
                         class="mt10">
 
-                        <!-- <mat-card-content>
-                            <div class="row">
-                                <div class="col-md-11">
-                                    <p> <b> Q {{q.count}} </b> <span class="ml10" [innerHTML]="q.content"></span>
-                                    </p>
-                                </div>
-
-
-                                <div class="col-md-1" *ngIf="q.givenAnswer">
-                                    <mat-checkbox class="example-margin" checked disabled></mat-checkbox>
-                                </div>
-
-                            </div>
-
-                            <mat-divider></mat-divider>
-                            <br />
-                            <div class="row mt20">
-                                <div class="col-md-6">
-                                    <input type="radio" [value]="q.option1" [name]="i" [(ngModel)]="q.givenAnswer" />
-                                    {{q.option1}}
-
-                                </div>
-
-                                <div class="col-md-6">
-                                    <input type="radio" [value]="q.option2" [name]="i" [(ngModel)]="q.givenAnswer" />
-                                    {{q.option2}}
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="radio" [value]="q.option3" [name]="i" [(ngModel)]="q.givenAnswer" />
-                                    {{q.option3}}
-                                </div>
-
-                                <div class="col-md-6">
-                                    <input type="radio" [value]="q.option4" [name]="i" [(ngModel)]="q.givenAnswer" />
-                                    {{q.option4}}
-                                </div>
-                            </div>
-                        </mat-card-content>
-                    </mat-card> -->
-
-
+                    
+                        <!-- 2345tttt#@$$%33333 -->
 
                         <!-- MULTIPLE SELECTIONS STARTS -->
 
@@ -168,35 +127,17 @@
                         </pagination-controls>
                     </div>
 
-
+                </div>
 
                     <!-- subjective questions here -->
                     <div *ngIf="currentQuestions; else elseBlock">
                         <mat-card>
                             <!-- {{resetData |json}} -->
                             <mat-card class="cards"
-                                style=" font-size:20px; color: white;text-align: center; background-color: purple;">
-                                SECTION B
+                                style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
+                            <mat-label> SECTION B -{{timeT /60}} minutes </mat-label>
                             </mat-card>
-                            <!-- <mat-divider style="margin: 20px;"></mat-divider> -->
-                            <!--                         
-                        <mat-card>
-                          <div class="container">
-                            <div class="row">
-                              <mat-label>Select set of questions answered!</mat-label>
-                              <div class="col-md-12">
-                                <div *ngIf="prefixes.length > 0" class="prefix-container">
-                                  <div *ngFor="let prefix of prefixes" class="prefix-item">
-                                    <mat-checkbox [checked]="selectedQuestions[prefix]" color="primary"
-                                      (change)="togglePrefixSelection(prefix)">
-                                      {{ prefix }}
-                                    </mat-checkbox>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </mat-card> -->
+                          
 
 
                             <form>
@@ -296,16 +237,13 @@
                     <!-- progres -->
                     <mat-card class="cards">
                         <mat-card-header>
-                            <mat-card-title>Progress </mat-card-title>
-                            <mat-card-subtitle>
-                                Quiz will be submitted automatically when time elapses <b>(0:0) </b>
-                            </mat-card-subtitle>
+                            <mat-card-title>Time Left: </mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
                             <h1 class="text-center"><i>{{ getFormmatedTime() }} </i></h1>
                             <!-- <mat-spinner [value]="(this.time/(this.questions.length * 2 * 60)) * 100"  -->
-                            <mat-spinner [value]="(timer/(this.questions.length  * 60)) * 100 " mode="determinate"
-                                color="accent" style="margin: auto;"></mat-spinner>
+                            <!-- <mat-spinner [value]="(timer/(this.questions.length  * 60)) * 100 " mode="determinate"
+                                color="accent" style="margin: auto;"></mat-spinner> -->
                         </mat-card-content>
                     </mat-card>
                 </div>
